Reformat layout to three columns: display settings, visualization, and statistics. Add padding. Add line breaks between display settings elements.

--- a/crime_app/assets/custom_styling.css
+++ b/crime_app/assets/custom_styling.css
@@ -1,13 +1,16 @@
-/*Everything except the top header*/
-.top_header {
-    background-color: #0032A1;
-    height: 10vh;
+p  {
+    font-weight: bold;
 }
 
-.layout {
-    padding-top: 25px;
-    padding-right: 25px;
-    padding-bottom: 25px;
-    padding-left: 25px;
-    background-color: whitesmoke;
+.layout  {
+    background-color: grey;
+}
+
+/*Content within the app, excluding top header*/
+.app_content  {
+    padding-top: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    background-color: white;
 }
