--- a/new_crime_app/templates/base.html
+++ b/new_crime_app/templates/base.html
@@ -2,8 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}">
     <title>Base Page</title>
 </head>
+
+    <script src="{{ url_for('static', filename='js/bootstrap.bundle.js') }}" defer></script>
+
 <body>
 
 </body>
