--- a/crime_flask_app/templates/navbar.html
+++ b/crime_flask_app/templates/navbar.html
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('main.index') }}">Home</a>
+                    <a class="nav-link" href="{{ url_for("main.index") }}">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Profiles</a>
@@ -17,10 +17,7 @@
                     <a class="nav-link" href="#">Dashboard</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('blog.b') }}">Blog</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('auth.signup') }}">Sign up</a>
+                    <a class="nav-link" href="{{ url_for("auth.signup") }}">Sign up</a>
                 </li>
             </ul>
         </div>
