--- a/matic_flask_app/templates/layout.html
+++ b/matic_flask_app/templates/layout.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}">
-    <script src="{{ url_for('static', filename='js/bootstrap.bundle.js') }}" defer></script>
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" ></script>
     <title>{{ title }}</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Crime App</a>
+<nav class="navbar navbar-expand-lg navbar-dark" style='background-color: #20206A;'>
+    <a class="navbar-brand" href="/home">
+            <img src="static/met_logo.jpeg" width="200" height="50"></div>
+    </a>
     <button
             class="navbar-toggler"
             type="button"
@@ -22,44 +26,37 @@
   </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav me-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="{{ url_for("views.home") }}">Home<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{{ url_for("views.home") }}" style = "color:#ffffff" >Home<span class="sr-only"></span></a>
       </li>
         {% if user.is_authenticated %}
         <li class="nav-item active">
-            <a class="nav-item nav-link" href="/dashboard">Dashboard</a>
+            <a class="nav-item nav-link" href="/dashboard" style = "color:#ffffff" >Dashboard</a>
             </li>
         <li class="nav-item active">
-            <a class="nav-item nav-link" href="/blog">Blog</a>
+            <a class="nav-item nav-link" href="/blog" style = "color:#ffffff" >Blog</a>
         </li>
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle"
-               href="#" id="navbarDropdown"
-               role="button"
-               data-toggle="dropdown"
-               aria-haspopup="true"
-               aria-expanded="false">
-                User</a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">My Account</a>
-          <a class="dropdown-item" href="#">My Posts</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Logout</a>
-        </div>
-      </li>
+        {%endif%}
+    </ul>
+        <ul class="navbar-nav ms-auto">
+            {% if user.is_authenticated %}
+        <li class="nav-item active">
+            <a class="nav-item nav-link" href="/user" style = "color:#ffffff" >My Account</a></li>
+            <li class="nav-item active">
+            <a class="nav-item nav-link" href="#" style = "color:#ffffff" >My Posts</a></li>
+                <li class="nav-item active">
+            <a class="nav-item nav-link" href="/logout" style = "color:#ffffff" >Logout</a></li>
+            </li>
         {% else%}
-        <div align="right">
+            <li class="nav-item">
             <a href="/login">
                 <button type="button" class="btn btn-sm btn-secondary">Login</button></a>
-        </div>
-        <div align="right">
             <a href="/signup">
                 <button type="button" class="btn btn-sm btn-secondary">Sign Up</button></a>
-        </div>
         {%endif%}
         </ul>
-  </div>
+    </div>
 </nav>
 {% with messages = get_flashed_messages(with_categories=True) %}
       {% if messages %}
@@ -80,5 +77,6 @@
       {% endif %}
     {% endwith %}
 <div>{% block content%}{%endblock%}</div>
+
 </body>
 </html>
