--- a/matic_flask_app/templates/blog_posts.html
+++ b/matic_flask_app/templates/blog_posts.html
@@ -3,7 +3,7 @@
   {% for post in posts %}
   <div class="card border-dark">
     <div class="card-header d-flex justify-content-between align-items-center">
-      <a href="/posts/{{post.user.username}}">{{post.user.username}}</a>
+      <a href="/{{post.user.username}}">{{post.user.username}}</a>
       {% if user.id == post.author %}
       <div class="btn-group">
         <button
