fixed integration with dash app, now correctly shows the naviagation bar

--- a/crime_flask_app/templates/layout.html
+++ b/crime_flask_app/templates/layout.html
@@ -77,6 +77,8 @@
       {% endif %}
     {% endwith %}
 <div>{% block content%}{%endblock%}</div>
-
 </body>
+<footer>
+    {%block footer%}{%endblock%}
+</footer>
 </html>
