--- a/crime_flask_app/templates/dashboard.html
+++ b/crime_flask_app/templates/dashboard.html
@@ -1,2 +1,58 @@
-{% extends "layout.html" %}
-{% block content %} Dashboard {%endblock%}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" ></script>
+    <title>{{ title }}</title>
+</head>
+<body>
+<nav class="navbar navbar-expand-lg navbar-dark" style='background-color: #20206A;'>
+    <a class="navbar-brand" href="/home">
+            <img src="/static/met_logo.jpeg" width="200" height="50"></div>
+    </a>
+    <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav me-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/" style = "color:#ffffff" >Home<span class="sr-only"></span></a>
+      </li>
+        <li class="nav-item active">
+            <a class="nav-item nav-link" href="/dashboard" style = "color:#ffffff" >Dashboard</a>
+            </li>
+        <li class="nav-item active">
+            <a class="nav-item nav-link" href="/blog" style = "color:#ffffff" >Blog</a>
+        </li>
+    </ul>
+        <ul class="navbar-nav ms-auto">
+        <li class="nav-item active">
+            <a class="nav-item nav-link" href="/{{user.username}}" style = "color:#ffffff" >My Account</a></li>
+            <li class="nav-item active">
+            <a class="nav-item nav-link" href="/posts/{{user.username}}" style = "color:#ffffff" >My Posts</a></li>
+                <li class="nav-item active">
+            <a class="nav-item nav-link" href="/logout" style = "color:#ffffff" >Logout</a></li>
+            </li>
+        </ul>
+    </div>
+</nav>
+{%app_entry%}
+</body>
+<footer>
+    {%config%}
+    {%scripts%}
+    {%renderer%}
+</footer>
+</html>
