--- a/crime_flask_app/templates/layout.html
+++ b/crime_flask_app/templates/layout.html
@@ -12,7 +12,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark" style='background-color: #20206A;'>
     <a class="navbar-brand" href="/home">
-            <img src="static/met_logo.jpeg" width="200" height="50"></div>
+            <img src="/static/met_logo.jpeg" width="200" height="50"></div>
     </a>
     <button
             class="navbar-toggler"
