Add basic user info to my account

--- a/crime_flask_app/templates/my_account.html
+++ b/crime_flask_app/templates/my_account.html
@@ -6,10 +6,11 @@
 <h2>Welcome, {{user.username}}</h2>
 
 <!--User information -->
-<strong>User ID: </strong><br/>
-<strong>Email: </strong><br/>
-<strong>Username: </strong><br/>
-<strong>Date User Created: </strong><br/>
+<strong>User ID: </strong>{{user.id}}<br/>
+<strong>Email: </strong>{{user.email}}<br/>
+<strong>Username: </strong>{{user.username}}<br/>
+<strong>Date Joined: </strong>{{user.date_created}}<br/>
+
 <!--add profile pic also -->
 
 <!--Logout button -->
