--- a/crime_flask_app/templates/my_account.html
+++ b/crime_flask_app/templates/my_account.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
+<!--User information card -->
 <div class="card">
     <!-- Small title at the top of the card -->
     <div class="card-header">
@@ -10,7 +11,7 @@
         <h5 class="card-title">Welcome, {{user.username}}</h5>
         <!-- Supporting text -->
         <p class="card-text">
-            <!--User information -->
+
             <!--add profile pic here -->
             <strong>User ID: </strong>{{user.id}}<br/>
             <strong>Email: </strong>{{user.email}}<br/>
@@ -22,6 +23,8 @@
         <a href="{{ url_for('auth.logout')}}" class="btn-secondary">Logout</a>
     </div>
 </div>
+
+<!--Edit user information card (this could also be a separate page?) -->
 
 <br/>
 <br/>
