--- a/crime_flask_app/templates/home.html
+++ b/crime_flask_app/templates/home.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
+{%block title%}
+<title>Home</title>
+{%endblock%}
 {% block content %}
 <h1 id="visualisations-design-explanations">Visualisations Design Explanations</h1>
 <p>In this project, we set out to create an insightful and well-functioning Dash App for our dataset. To achieve this, we made three different visualisations to answer our target audience questions.
@@ -49,6 +52,7 @@ This can be useful to calculate the traditional crime rate statistics per 1000 r
 <li>Crime Rate per 1000 daytime population, adjusted with Total Daytime Population including tourists</li>
 <li>Crime Rate per 1000 daytime population, adjusted only with Working Daytime Population excluding tourists (which might be most appropriate for the COVID-19 period)</li>
 </ul>
-<p>Each of the mentioned visualizations will change based on selected data and is able to answer one or multiple of the aforementioned target audience questions.
-To explain the design of our visualizations clearly, we will first obtain a solid understanding of our target audience and their needs.</p>
+<p>Please <a href="signup.html">create an account </a>or <a href="login.html">login </a>to gain access to the dash app. You can also refer to the video bellow as a tutorial
+on the functionalities of the app.</p>
+<p align="center"><iframe width="560" height="315" src="https://www.youtube.com/embed/ufafiY_zjP0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 {%endblock%}
