--- a/crime_flask_app/templates/user_posts.html
+++ b/crime_flask_app/templates/user_posts.html
@@ -1,8 +1,12 @@
 {% extends "blog_posts.html" %}
 {% block footer %}
 <div align="center">
+  <br/>
   <a href="/home"
-    ><button type="button" class="btn btn-primary btn-lg">Back</button></a
+    ><button type="button" class="btn btn-secondary btn-lg">Home</button></a
+  >
+  <a href="/blog"
+    ><button type="button" class="btn btn-secondary btn-lg">Blog</button></a
   >
 </div>
 {% endblock %}
