--- a/crime_flask_app/templates/blog_posts.html
+++ b/crime_flask_app/templates/blog_posts.html
@@ -1,9 +1,18 @@
-{% extends "layout.html" %} {% block content%}
+{% extends "layout.html" %}
+{%block title%}
+<title>Blog Posts</title>
+{%endblock%}
+{% block content%}
 <div id="posts">
   {% for post in posts %}
+  <br/>
   <div class="card border-dark">
     <div class="card-header d-flex justify-content-between align-items-center">
+      {%if user.id == post.author%}
       <a href="/{{post.user.username}}">{{post.user.username}}</a>
+      {%else%}
+      <a>Author: {{post.user.username}}</a>
+      {% endif %}
       {% if user.id == post.author %}
       <div class="btn-group">
         <button
@@ -15,23 +24,30 @@
           <li>
             <a href="/delete-post/{{post.id}}" class="dropdown-item">Delete</a>
           </li>
+          <li>
+            <a href="/edit-post/{{post.id}}" class="dropdown-item">Edit</a>
+          </li>
         </ul>
       </div>
       {% endif %}
+    </div>
+    <div class = "card-header">
+      <div style="font-size: x-large">{{post.title}}</div>
     </div>
     <div class="card-body">
       <div class="card-text">{{post.text}}</div>
     </div>
     <div class="card-footer text-muted">{{post.date_created}}</div>
   </div>
-  <br/> {% endfor %}
+  {% endfor %}
 </div>
-{% block footer %}
 <div align="center">
+  <br/>
   <a href="/create_post"
     ><button type="button" class="btn btn-primary btn-lg">
       Create a Post
     </button></a
   >
 </div>
-{% endblock %} {% endblock %}
+{% endblock %}
+{%block footer%}{% endblock %}
