--- a/crime_flask_app/templates/dashboard.html
+++ b/crime_flask_app/templates/dashboard.html
@@ -7,7 +7,8 @@
     <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" ></script>
-    <title>{{ title }}</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <title>Dashboard</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark" style='background-color: #20206A;'>
@@ -43,7 +44,8 @@
             <li class="nav-item active">
             <a class="nav-item nav-link" href="/posts/{{user.username}}" style = "color:#ffffff" >My Posts</a></li>
                 <li class="nav-item active">
-            <a class="nav-item nav-link" href="/logout" style = "color:#ffffff" >Logout</a></li>
+            <a href="/logout">
+                <button type="button" class="btn btn-sm btn-secondary">Logout</button></a></li>
             </li>
         </ul>
     </div>
