--- a/crime_flask_app/templates/layout.html
+++ b/crime_flask_app/templates/layout.html
@@ -55,7 +55,7 @@
         {% else%}
             <li class="nav-item">
             <a href="/login" id="nav-login">
-                <button type="button" class="btn btn-sm btn-secondary">Login</button></a> <!-- Button formatting-->
+                <button type="button" class="btn btn-sm btn-secondary" id="nav-login-btn">Login</button></a> <!-- Button formatting-->
             <a href="/signup" id="nav-signup">
                 <button type="button" class="btn btn-sm btn-secondary" id="nav-signup-btn">Sign Up</button></a>
         {%endif%}
