--- a/crime_flask_app/templates/login.html
+++ b/crime_flask_app/templates/login.html
@@ -21,7 +21,7 @@
     />
     <br />
     <div align="center">
-      <button class="btn btn-primary" type="submit">Login</button>
+      <button class="btn btn-primary" type="submit" id="btn-login">Login</button>
     </div>
   </div>
 </form>
