Fix a bunch of stuff for editing profile, add edit profile button

--- a/crime_flask_app/templates/my_account.html
+++ b/crime_flask_app/templates/my_account.html
@@ -21,6 +21,9 @@
 
         <!-- Logout button -->
         <a href="{{ url_for('auth.logout')}}" class="btn-secondary">Logout</a>
+
+        <!-- Edit profile button -->
+        <a href="{{ url_for('views.update', id=user.id)}}" class="btn-primary">Update Profile</a>
     </div>
 </div>
 
