added ids and tests

--- a/crime_flask_app/templates/blog_posts.html
+++ b/crime_flask_app/templates/blog_posts.html
@@ -133,7 +133,7 @@
 <div align="center">
   <br/>
   <a href="/create_post"
-    ><button type="button" class="btn btn-primary btn-lg">
+    ><button type="button" class="btn btn-primary btn-lg" id="create_post-btn">
       Create a Post
     </button></a
   >
