--- a/crime_flask_app/templates/layout.html
+++ b/crime_flask_app/templates/layout.html
@@ -35,7 +35,7 @@
       </li>
         {% if user.is_authenticated %}
         <li class="nav-item active">
-            <a class="nav-item nav-link" href="/dashboard" style = "color:#ffffff" >Dashboard</a>
+            <a class="nav-item nav-link" href="/dashboard" style = "color:#ffffff" id="nav-dashboard-btn">Dashboard</a>
             </li>
         <li class="nav-item active">
             <a class="nav-item nav-link" href="/blog" style = "color:#ffffff" >Blog</a>
