--- a/crime_flask_app/templates/dashboard.html
+++ b/crime_flask_app/templates/dashboard.html
@@ -35,7 +35,7 @@
             <a class="nav-item nav-link" href="/dashboard" style = "color:#ffffff" >Dashboard</a>
             </li>
         <li class="nav-item active">
-            <a class="nav-item nav-link" href="/blog" style = "color:#ffffff" >Blog</a>
+            <a class="nav-item nav-link" href="/blog" style = "color:#ffffff" id="dash_nav-blog-btn">Blog</a>
         </li>
     </ul>
         <ul class="navbar-nav ms-auto">
