--- a/crime_flask_app/templates/update.html
+++ b/crime_flask_app/templates/update.html
@@ -1,19 +1,18 @@
 {% extends "layout.html" %}
 {% block content %}
 
+<!-- If the user is editing their own profile -->
+{% if id == current_user.id %}
 <h1>Update User...</h1>
 <br/>
 <div class="shadow p-3 mb-5 bg-body rounded">
 	<form action="/update/{{ id_to_update.id }}" method="POST">
 		{{ form.hidden_tag() }}
-
 		{{ form.username.label(class="form-label") }}
-
 		{{ form.username(class="form-control", value=id_to_update.username) }}
 		<br/>
 
 		{{ form.email.label(class="form-label") }}
-
 		{{ form.email(class="form-control", value=id_to_update.email) }}
 		<br/>
 
@@ -24,5 +23,18 @@
 	</form>
 </div>
 <br/><br/><br/>
+
+{% else %}
+<!--If the user tries to edit someone else's profile via typing in the URL -->
+ <div class="alert alert-warning alert-dismissible fade show" role="alert">
+	 Sorry! You Can't Edit This User...
+	 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+ </div>
+<h2>Access Denied!</h2>
+<p>Sorry, you cannot access this user profile...</p>
+
+{% endif %}
+
+
 
 {% endblock %}
