--- a/crime_flask_app/templates/update.html
+++ b/crime_flask_app/templates/update.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <!-- If the user is editing their own profile -->
-{% if id == current_user.id %}
+{% if id_to_update.id == current_user.id %}
 <h1>Update User...</h1>
 <br/>
 <div class="shadow p-3 mb-5 bg-body rounded">
@@ -16,8 +16,6 @@
 		{{ form.email(class="form-control", value=id_to_update.email) }}
 		<br/>
 
-        <!-- password functionality here?-->
-		
 		{{ form.submit(class="btn btn-secondary") }}
 
 	</form>
@@ -34,7 +32,5 @@
 <p>Sorry, you cannot access this user profile...</p>
 
 {% endif %}
-
-
 
 {% endblock %}
