Add margins for whole app

--- a/crime_flask_app/templates/dashboard.html
+++ b/crime_flask_app/templates/dashboard.html
@@ -50,7 +50,8 @@
         </ul>
     </div>
 </nav>
-{%app_entry%}
+<!--Where the dashboard will load. Different margins for dashboard-->
+<div style="margin:2vw;">{%app_entry%}</div>
 </body>
 <footer>
     {%config%}
