--- a/crime_flask_app/templates/layout.html
+++ b/crime_flask_app/templates/layout.html
@@ -13,6 +13,8 @@
 {%block title%}{%endblock%}
 </head>
 <body>
+
+<!-- Navigation bar -->
 <nav class="navbar navbar-expand-lg navbar-dark" style='background-color: #20206A;'>
     <a class="navbar-brand" href="/home">
             <img src="/static/met_logo.jpeg" width="200" height="50"></div>
@@ -80,8 +82,12 @@
         {% endfor %}
       {% endif %}
     {% endwith %}
-<div>{% block content%}{%endblock%}</div>
+
+<!-- Main content will extend from here-->
+<div style="margin:2vw 10vw 5vw 10vw;">{% block content %}{% endblock %}</div>
 </body>
+
+<!-- Footer -->
 <footer>
     {%block footer%}{%endblock%}
 </footer>
