Some more formatting stuff

--- a/crime_flask_app/templates/home.html
+++ b/crime_flask_app/templates/home.html
@@ -3,7 +3,11 @@
 <title>Home</title>
 {%endblock%}
 {% block content %}
-<h1 id="visualisations-design-explanations">Visualisations Design Explanations</h1>
+<br/>
+<h1 style="color:#20206A; font-weight:bold;">Welcome to the London Crime Flask App!</h1>
+<hr>
+<br/>
+<h2 id="visualisations-design-explanations">Visualisations Design Explanations</h2>
 <p>In this project, we set out to create an insightful and well-functioning Dash App for our dataset. To achieve this, we made three different visualisations to answer our target audience questions.
 In coursework 1 of COMP0035, we detailed these questions relating to the Metropolitan Police dataset and have been listed below:</p>
 <pre><code><span class="hljs-number">1.</span> How has drug crime evolved <span class="hljs-keyword">in</span> London over <span class="hljs-keyword">the</span> <span class="hljs-literal">two</span> recorded years?
