--- a/crime_flask_app/templates/my_account.html
+++ b/crime_flask_app/templates/my_account.html
@@ -1,14 +1,14 @@
 {% extends "layout.html" %}
 {% block content %}
+<h1>My Account</h1>
+<br/>
 <!--User information card -->
 <div class="card">
     <!-- Small title at the top of the card -->
     <div class="card-header">
-        My Account
+        My Account Details
     </div>
     <div class="card-body">
-        <!-- Big title of the card -->
-        <h5 class="card-title">Welcome, {{user.username}}</h5>
         <!-- Supporting text -->
         <p class="card-text">
 
