added ids and tests

--- a/crime_flask_app/templates/create_post.html
+++ b/crime_flask_app/templates/create_post.html
@@ -8,10 +8,10 @@
 
 <form method="POST">
   <a>Post Title</a>
-  <textarea name="title" id="title" class="form-control" id="title-text"></textarea>
+  <textarea name="title" id="title" class="form-control"></textarea>
   <br/>
   <a>Post Content</a>
-  <textarea name="text" id="text" class="form-control" id="content-text"></textarea>
+  <textarea name="text" id="text" class="form-control" ></textarea>
   <br />
   <div align="center">
     <a href="blog_posts.html">
