Update buttons on my account

--- a/crime_flask_app/templates/my_account.html
+++ b/crime_flask_app/templates/my_account.html
@@ -20,10 +20,10 @@
         </p>
 
         <!-- Logout button -->
-        <a href="{{ url_for('auth.logout')}}" class="btn-secondary">Logout</a>
+        <a href="{{ url_for('auth.logout')}}" class="btn btn-sm btn-secondary">Logout</a>
 
         <!-- Edit profile button -->
-        <a href="{{ url_for('views.update', id=user.id)}}" class="btn-primary">Update Profile</a>
+        <a href="{{ url_for('views.update', id=user.id)}}" class="btn btn-sm btn-primary">Update Profile</a>
     </div>
 </div>
 
