added ids and tests

--- a/crime_flask_app/templates/dashboard.html
+++ b/crime_flask_app/templates/dashboard.html
@@ -50,8 +50,7 @@
         </ul>
     </div>
 </nav>
-<!--Where the dashboard will load. Different margins for dashboard-->
-<div style="margin:2vw;">{%app_entry%}</div>
+{%app_entry%}
 </body>
 <footer>
     {%config%}
