user post edit test

--- a/crime_flask_app/templates/blog_posts.html
+++ b/crime_flask_app/templates/blog_posts.html
@@ -32,23 +32,24 @@
           type="button"
           class="btn btn-sm btn-primary dropdown-toggle"
           data-bs-toggle="dropdown"
+          id = "post_dropdown-btn"
         ></button>
         <ul class="dropdown-menu">
           <li>
-            <a href="/delete-post/{{post.id}}" class="dropdown-item">Delete</a>
+            <a href="/delete-post/{{post.id}}" class="dropdown-item" id="delete-btn">Delete</a>
           </li>
           <li>
-            <a href="/edit-post/{{post.id}}" class="dropdown-item">Edit</a>
+            <a href="/edit-post/{{post.id}}" class="dropdown-item" id="edit-btn">Edit</a>
           </li>
         </ul>
       </div>
       {% endif %}
     </div>
     <div class = "card-header">
-      <div style="font-size: x-large">{{post.title}}</div>
+      <div style="font-size: x-large" id="post_title">{{post.title}}</div>
     </div>
     <div class="card-body">
-      <div class="card-text">{{post.text}}</div>
+      <div class="card-text" id="post_text">{{post.text}}</div>
       <div class="card-footer text-muted">Created: {{post.date_created}}</div>
       <br/>
       <div>
