--- a/crime_flask_app/templates/edit_post.html
+++ b/crime_flask_app/templates/edit_post.html
@@ -19,7 +19,7 @@
 
 		<div align="center">
     <a href="blog_posts.html">
-    <button type="submit" class="btn btn-lg btn-primary">Submit</button></a>
+    <button type="submit" class="btn btn-lg btn-primary" id="edit_submit-btn">Submit</button></a>
   </div>
 
 	</form>
