--- a/crime_flask_app/templates/layout.html
+++ b/crime_flask_app/templates/layout.html
@@ -49,7 +49,7 @@
         <li class="nav-item active">
             <a class="nav-item nav-link" href="/{{user.username}}" style = "color:#ffffff" >My Account</a></li>
             <li class="nav-item active">
-            <a class="nav-item nav-link" href="/posts/{{user.username}}" style = "color:#ffffff" >My Posts</a></li>
+            <a class="nav-item nav-link" href="/posts/{{user.username}}" style = "color:#ffffff" id="my_post-btn">My Posts</a></li>
                 <li class="nav-item active">
             <a href="/logout" id="nav-logout">
                 <button type="button" class="btn btn-sm btn-secondary">Logout</button></a></li>
