--- a/crime_flask_app/templates/blog_posts.html
+++ b/crime_flask_app/templates/blog_posts.html
@@ -46,10 +46,10 @@
       {% endif %}
     </div>
     <div class = "card-header">
-      <div style="font-size: x-large" id="post_title">{{post.title}}</div>
+      <div style="font-size: x-large" id="post_{{post.id}}_title">{{post.title}}</div>
     </div>
     <div class="card-body">
-      <div class="card-text" id="post_text">{{post.text}}</div>
+      <div class="card-text" id="post_{{post.id}}_text">{{post.text}}</div>
       <div class="card-footer text-muted">Created: {{post.date_created}}</div>
       <br/>
       <div>
