user post edit test

--- a/crime_flask_app/templates/blog_posts.html
+++ b/crime_flask_app/templates/blog_posts.html
@@ -38,7 +38,7 @@
           <li>
             <a href="/delete-post/{{post.id}}" class="dropdown-item" id="delete-btn">Delete</a>
           </li>
-          <li>
+          <li id="edit_btn_li">
             <a href="/edit-post/{{post.id}}" class="dropdown-item" id="edit-btn">Edit</a>
           </li>
         </ul>
