--- a/crime_flask_app/templates/layout.html
+++ b/crime_flask_app/templates/layout.html
@@ -40,7 +40,7 @@
             <a class="nav-item nav-link" href="/dashboard" style = "color:#ffffff" id="nav-dashboard-btn">Dashboard</a>
             </li>
         <li class="nav-item active">
-            <a class="nav-item nav-link" href="/blog" style = "color:#ffffff" >Blog</a>
+            <a class="nav-item nav-link" href="/blog" style = "color:#ffffff" id="nav-blog-btn">Blog</a>
         </li>
         {%endif%}
     </ul>
