--- a/crime_flask_app/templates/my_account.html
+++ b/crime_flask_app/templates/my_account.html
@@ -8,7 +8,7 @@
         My Account Details
     </div>
     <div class="card-body">
-        <p class="card-text">
+        <p class="card-text" id="user_card">
             <strong>User ID: </strong>{{user.id}}<br/>
             <strong>Email: </strong>{{user.email}}<br/>
             <strong>Username: </strong>{{user.username}}<br/>
