--- a/crime_flask_app/templates/change_password.html
+++ b/crime_flask_app/templates/change_password.html
@@ -10,7 +10,7 @@
         <!--Enter Old Password -->
         <div class="form-group">
             <label>Enter Old Password...</label>
-            <input name="oldpassword" type="password" class="form-control" value=""
+            <input name="old_password" type="password" class="form-control" value=""
             aria-describedby="emailHelp" placeholder="Enter Old Password...">
         </div>
 
