Lots of fixes to change password

--- a/crime_flask_app/templates/my_account.html
+++ b/crime_flask_app/templates/my_account.html
@@ -21,6 +21,9 @@
         <!-- Edit profile button -->
         <a href="{{ url_for('views.update', id=user.id)}}" class="btn btn-sm btn-primary">Update Profile</a>
 
+        <!-- Change password button -->
+        <a href="{{ url_for('views.changepassword', id=user.id)}}" class="btn btn-sm btn-primary">Change Password</a>
+
         <!-- Delete profile button -->
         <a href="{{ url_for('views.delete', id=user.id)}}" class="btn btn-sm btn-danger">Delete Profile</a>
     </div>
