Remove entering current password to change the password

--- a/crime_flask_app/templates/change_password.html
+++ b/crime_flask_app/templates/change_password.html
@@ -7,25 +7,18 @@
 <br/>
 <div class="shadow p-3 mb-5 bg-body rounded">
 	<form method="POST" enctype="multipart/form-data">
-        <!--Enter Old Password -->
-        <div class="form-group">
-            <label>Enter Old Password...</label>
-            <input name="old_password" type="password" class="form-control" value=""
-            aria-describedby="emailHelp" placeholder="Enter Old Password...">
-        </div>
-
         <!--Enter New Password -->
         <div class="form-group">
             <label>Enter New Password...</label>
             <input name="new_password" type="password" class="form-control" value=""
-             aria-describedby="emailHelp" placeholder="Enter New Password...">
+             aria-describedby="emailHelp">
         </div>
 
         <!--Confirm New Password -->
         <div class="form-group">
             <label>Confirm New Password...</label>
             <input name="confirm_password" type="password" class="form-control" value=""
-             aria-describedby="emailHelp" placeholder="Confirm New Password...">
+             aria-describedby="emailHelp">
         </div>
 
         <!-- Submit button -->
