--- a/crime_flask_app/templates/change_password.html
+++ b/crime_flask_app/templates/change_password.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 
-<!-- If the user is editing their own profile -->
+<!-- If the user is editing their own password -->
 {% if id_to_update.id == current_user.id %}
 <h1>Change Password...</h1>
 <br/>
