--- a/crime_flask_app/templates/my_account.html
+++ b/crime_flask_app/templates/my_account.html
@@ -1,5 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
+<!-- If the user is viewing their own profile -->
+{% if id_to_update.id == current_user.id %}
+
 <h1>My Account</h1>
 <br/>
 <!--User information card -->
@@ -29,10 +32,17 @@
     </div>
 </div>
 
-<!--Edit user information card (this could also be a separate page?) -->
-
 <br/>
 <br/>
 
+<!--If the user tries to view someone else's profile via typing in the URL -->
+{% else %}
+ <div class="alert alert-warning alert-dismissible fade show" role="alert">
+	 Sorry! You Can't View This User...
+	 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+ </div>
+<h2>Access Denied!</h2>
+
+{% endif %}
 
 {% endblock %}
