Finish username test

--- a/crime_flask_app/templates/update.html
+++ b/crime_flask_app/templates/update.html
@@ -16,7 +16,7 @@
 		{{ form.email(class="form-control", value=id_to_update.email) }}
 		<br/>
 
-		{{ form.submit(class="btn btn-secondary") }}
+		{{ form.submit(class="btn btn-secondary", id="update-submit-btn") }}
 
 	</form>
 </div>
