--- a/crime_flask_app/templates/change_password.html
+++ b/crime_flask_app/templates/change_password.html
@@ -24,7 +24,7 @@
         <br/>
 
         <!-- Submit button -->
-        <button type="submit" class="btn btn-sm btn-primary">Submit</button>
+        <button type="submit" id="changepass-btn"  class="btn btn-sm btn-primary">Submit</button>
 	</form>
     <br/>
 </div>
