Correct the button ID for the update button AGAIN

--- a/crime_flask_app/templates/my_account.html
+++ b/crime_flask_app/templates/my_account.html
@@ -19,7 +19,7 @@
         <a href="{{ url_for('auth.logout')}}" class="btn btn-sm btn-secondary"
            id="my-account-logout-btn">Logout</a>
 
-        <!-- Edit profile button -->
+        <!-- Update profile button -->
         <a href="{{ url_for('views.update', id=user.id)}}" class="btn btn-sm btn-primary"
            id="my-account-update-btn">Update Profile</a>
 
