added chat links

--- a/crime_flask_app/templates/dashboard.html
+++ b/crime_flask_app/templates/dashboard.html
@@ -37,6 +37,9 @@
         <li class="nav-item active">
             <a class="nav-item nav-link" href="/blog" style = "color:#ffffff" id="dash_nav-blog-btn">Blog</a>
         </li>
+        <li class="nav-item active">
+            <a class="nav-item nav-link" href="/chat" style = "color:#ffffff" id="nav-chat-btn">Chat</a>
+        </li>
     </ul>
         <ul class="navbar-nav ms-auto">
         <li class="nav-item active">
