--- a/crime_flask_app/templates/layout.html
+++ b/crime_flask_app/templates/layout.html
@@ -42,6 +42,9 @@
         <li class="nav-item active">
             <a class="nav-item nav-link" href="/blog" style = "color:#ffffff" id="nav-blog-btn">Blog</a>
         </li>
+        <li class="nav-item active">
+            <a class="nav-item nav-link" href="/chat" style = "color:#ffffff" id="nav-chat-btn">Chat</a>
+        </li>
         {%endif%}
     </ul>
         <ul class="navbar-nav ms-auto">
